fixed text wrapping around about me image and resized image so I don't look like I'm in a funhouse mirror

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -140,12 +140,11 @@ p {
         margin: 0 20px 20px 20px;
     }
 
-
-
-
-
-
-
+    #aboutPic {
+        max-width: 670px;
+        max-height: 600px;
+        margin-right: 20px;
+    }
 
   @media only screen and (max-width: 767px) {
     .navbar-header {
